--- a/ed/index.html
+++ b/ed/index.html
@@ -90,9 +90,9 @@
     <nav role="navigation" aria-label="Main" id="site-nav" class="site-nav">
       
         <ul class="nav-list"><li class="nav-list-item"><a href="/wiki/" class="nav-list-link">Home</a></li><li class="nav-list-item"><a href="/wiki/contributors/" class="nav-list-link">Contributors</a></li><li class="nav-list-item active"><a href="/wiki/ed/" class="nav-list-link active">Ed.</a></li><li class="nav-list-item"><a href="#" class="nav-list-expander"><svg viewBox="0 0 24 24"><use xlink:href="#svg-arrow-right"></use></svg></a><a href="/wiki/wax/" class="nav-list-link">Wax</a><ul class="nav-list "><li class="nav-list-item "><a href="#" class="nav-list-expander"><svg viewBox="0 0 24 24"><use xlink:href="#svg-arrow-right"></use></svg></a><a href="/wiki/wax/setting-up-your-system/" class="nav-list-link">Setting up your system</a><ul class="nav-list"><li class="nav-list-item ">
-                    <a href="/wiki/wax/setting-up-your-system/install-manually/" class="nav-list-link">Manual Installation</a>
+                    <a href="/wiki/wax/setting-up-your-system/install-manually/" class="nav-list-link">Manual Installation Guide</a>
                   </li><li class="nav-list-item ">
-                    <a href="/wiki/wax/setting-up-your-system/with-docker/" class="nav-list-link">Docker Installation</a>
+                    <a href="/wiki/wax/setting-up-your-system/with-docker/" class="nav-list-link">Docker Installation Guide</a>
                   </li></ul></li><li class="nav-list-item "><a href="#" class="nav-list-expander"><svg viewBox="0 0 24 24"><use xlink:href="#svg-arrow-right"></use></svg></a><a href="/wiki/wax/preparing-your-collection-data/" class="nav-list-link">Preparing your collection data</a><ul class="nav-list"><li class="nav-list-item ">
                     <a href="/wiki/wax/preparing-your-collection-data/metadata/" class="nav-list-link">Metadata file</a>
                   </li><li class="nav-list-item ">
