deploy: 7e419d4a2d8ae67773ab910980f522311e2808ac

--- a/wax/setting-up-your-system/install-manually/index.html
+++ b/wax/setting-up-your-system/install-manually/index.html
@@ -249,7 +249,7 @@
     <p>Next install Git. The <a href="https://git-scm.com/downloads">Git Download page</a> includes good instructions and packages for all three major operating systems.</p>
   </li>
   <li>
-    <p>Install ImageMagick by following the instructions on the <a href="https://imagemagick.org/script/download.php#windows">ImageMagick Downloads page</a></p>
+    <p>Install ImageMagick by following the instructions on the <a href="https://imagemagick.org/script/download.php#windows">ImageMagick Downloads page</a> <strong>About half way down one of these is wording something like “Install legacy components (convert.exe etc)”. Tick this box!</strong></p>
   </li>
   <li>
     <p>Follow instructions on the <a href="https://docs.alfresco.com/5.0/tasks/Ghostscript-install.html">GhostScript installation page</a>.</p>
