deploy: 476aab520edc0fd9740666d190f764fd39a0e14d

--- a/wax/setting-up-your-system/install-manually/index.html
+++ b/wax/setting-up-your-system/install-manually/index.html
@@ -245,18 +245,15 @@
   <li>
     <p>First install Ruby. The <a href="https://rubyinstaller.org/">RubyInstaller for Windows 10</a> is probably the easiest way to get up and running. <strong>Make sure you install a Ruby version &gt; 2.4 and less than 3.0!</strong> On the last installation step make sure to run the <code class="language-plaintext highlighter-rouge">ridk install</code> step on the last step of the installation wizard.</p>
   </li>
-  <li>
-    <p>Next install Git. The <a href="https://git-scm.com/downloads">Git Download page</a> includes good instructions and packages for all three major operating systems.</p>
-  </li>
+  <li>Next install Git. The <a href="https://git-scm.com/downloads">Git Download page</a> includes good instructions and packages for all three major operating systems.</li>
+  <li>Install Curl <a href="https://curl.se/download.html">https://curl.se/download.html</a></li>
   <li>
     <p>Install ImageMagick by following the instructions on the <a href="https://imagemagick.org/script/download.php#windows">ImageMagick Downloads page</a> <strong>About half way down one of these is wording something like “Install legacy components (convert.exe etc)”. Tick this box!</strong></p>
   </li>
   <li>
     <p>Follow instructions on the <a href="https://docs.alfresco.com/5.0/tasks/Ghostscript-install.html">GhostScript installation page</a>.</p>
   </li>
-  <li>
-    <p>Download and install <a href="https://github.com/libvips/libvips/releases/tag/v8.11">libvips</a> from GitHub.</p>
-  </li>
+  <li>Download and install <a href="https://github.com/libvips/libvips/releases/tag/v8.11">libvips</a> from GitHub.</li>
 </ol>
 
 <p>When you’re done, try following along with the <a href="../#check-for-requirements">Check for requirements tab</a> to make sure everything is ready to go.</p>
