--- a/wax/setting-up-your-system/install-manually/index.html
+++ b/wax/setting-up-your-system/install-manually/index.html
@@ -251,7 +251,7 @@
     <p>Install ImageMagick by following the instructions on the <a href="https://imagemagick.org/script/download.php#windows">ImageMagick Downloads page</a> <strong>About half way down one of these is wording something like “Install legacy components (convert.exe etc)”. Tick this box!</strong></p>
   </li>
   <li>
-    <p>Follow instructions on the <a href="https://docs.alfresco.com/5.0/tasks/Ghostscript-install.html">GhostScript installation page</a>.</p>
+    <p>Follow instructions on the <a href="https://www.ghostscript.com/download/gsdnld.html">GhostScript downloads page</a>.</p>
   </li>
   <li>Download and install <a href="https://github.com/libvips/libvips/releases/tag/v8.11">libvips</a> from GitHub.</li>
 </ol>
