--- a/wax/setting-up-your-system/install-manually/index.html
+++ b/wax/setting-up-your-system/install-manually/index.html
@@ -246,9 +246,8 @@
     <p>First install Ruby. The <a href="https://rubyinstaller.org/">RubyInstaller for Windows 10</a> is probably the easiest way to get up and running. <strong>Make sure you install a Ruby version &gt; 2.4 and less than 3.0! Recommended is “Ruby+Devkit 2.7.3-1”</strong> On the last installation step make sure to run the <code class="language-plaintext highlighter-rouge">ridk install</code> step on the last step of the installation wizard.</p>
   </li>
   <li>Next install Git. The <a href="https://git-scm.com/downloads">Git Download page</a> includes good instructions and packages for all three major operating systems.</li>
-  <li>Install Curl <a href="https://curl.se/download.html">https://curl.se/download.html</a></li>
   <li>
-    <p>Install ImageMagick by following the instructions on the <a href="https://imagemagick.org/script/download.php#windows">ImageMagick Downloads page</a> <strong>About half way down one of these is wording something like “Install legacy components (convert.exe etc)”. Tick this box!</strong></p>
+    <p>Install ImageMagick by following the instructions on the <a href="https://imagemagick.org/script/download.php#windows">ImageMagick Downloads page</a> <strong>IMPORTANT!!! About half way down one of the install option menus is a checkbox with something like “Install legacy components (convert.exe etc)”. Tick this box!!!!</strong></p>
   </li>
   <li>
     <p>Follow instructions on the <a href="https://www.ghostscript.com/download/gsdnld.html">GhostScript downloads page</a>.</p>
