deploy: 068d7f82bcfced0f829b8460680f692231bd7850

--- a/wax/setting-up-your-system/install-manually/index.html
+++ b/wax/setting-up-your-system/install-manually/index.html
@@ -243,7 +243,7 @@
 
 <ol>
   <li>
-    <p>First install Ruby. The <a href="https://rubyinstaller.org/">RubyInstaller for Windows 10</a> is probably the easiest way to get up and running. <strong>Make sure you install a Ruby version &gt; 2.4 and less than 3.0! Recommended is “Ruby+Devkit 2.7.3-1”</strong> On the last installation step make sure to run the <code class="language-plaintext highlighter-rouge">ridk install</code> step on the last step of the installation wizard.</p>
+    <p>First install Ruby. The <a href="https://rubyinstaller.org/">RubyInstaller for Windows 10</a> is probably the easiest way to get up and running. <strong>Make sure you install a Ruby version &gt; 2.4 and less than 3.0! Recommended is “Ruby+Devkit 2.7.x”</strong> On the last installation step make sure to run the <code class="language-plaintext highlighter-rouge">ridk install</code> step on the last step of the installation wizard.</p>
   </li>
   <li>Next install Git. The <a href="https://git-scm.com/downloads">Git Download page</a> includes good instructions and packages for all three major operating systems.</li>
   <li>
