deploy: 3990773ca598b05e7c69e508cc1e07463a0aff7e

--- a/wax/preparing-your-collection-data/metadata/index.html
+++ b/wax/preparing-your-collection-data/metadata/index.html
@@ -684,6 +684,7 @@
 <ul>
   <li><code class="language-plaintext highlighter-rouge">id</code></li>
   <li><code class="language-plaintext highlighter-rouge">date</code> (use <code class="language-plaintext highlighter-rouge">_date</code> instead)</li>
+  <li><code class="language-plaintext highlighter-rouge">tags</code> (use <code class="language-plaintext highlighter-rouge">_tags</code> instead)</li>
   <li><code class="language-plaintext highlighter-rouge">thumbnail</code></li>
   <li><code class="language-plaintext highlighter-rouge">full</code></li>
   <li><code class="language-plaintext highlighter-rouge">manifest</code></li>
