deploy: 6dc9f34ea1614abead0ba0ccf228b124f4001708

--- a/ed/index.html
+++ b/ed/index.html
@@ -239,7 +239,7 @@
 
 <p>This documentation was built with beginners in mind, but has the necessary information for more seasoned producers.</p>
 
-<p>To install and use Ed you will be using your terminal. If you need a refresher, I highly recommend “<a href="https://www.computervillage.org/articles/CommandLine.pdf">The Command Line Crash Course</a>.” Working knowledge of HTML and CSS is also taken for granted. If you’re new to HTML and CSS, you may want to check out the relevant courses on <a href="https://www.codecademy.com/learn/web">codecademy.com</a>, the <a href="https://www.w3schools.com/html/">W3Schools</a> or do the <a href="https://onemonth.com/courses/learn-html-free">free modules at the One Month HTML Tutorial</a>.</p>
+<p>To install and use Ed you will be using your terminal. If you need a refresher, I highly recommend “<a href="https://www.computervillage.org/articles/CommandLine.pdf">The Command Line Crash Course</a>.” Working knowledge of HTML and CSS is also taken for granted. If you’re new to HTML and CSS, you may want to check out the relevant courses on <a href="https://www.codecademy.com/learn/web">codecademy.com</a>, the <a href="https://www.w3schools.com/html/">W3Schools</a>.</p>
 
 <p>Jekyll does not run very well on Windows machines for now. If you are using Windows, this theme won’t work for you, but we hope that you simply deploy our principles, and parts of our stylesheet, on a system like <a href="https://gohugo.io/">Hugo</a>, which does work on Windows.</p><hr />
       <h3 id="installing-ed-easy">
